# verifhai-public

./: .gitignore  .pre-commit-config.yaml  QuickReference.md  README.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml
ci/configs/: trufflehog.yaml
ci/scripts/: haiamm_compliance_checker.py  security_gate.py  template_validator.py
ci/semgrep/: permission-bypass.yml
claude-skill/: SKILL.md
claude-skill/templates/: IssueManagement.md  MonitoringLogging.md  SecureArchitecture.md  SecurityRequirements.md
claude-skill/workflows/: BuildPractice.md  MeasureMaturity.md  QuickAssess.md  ReviewCode.md  ShowStatus.md
container/: .dockerignore  Dockerfile  Dockerfile.dev  docker-compose.dev.yml  docker-compose.yml
container/ci/: build-and-sign.yml
container/k8s/: configmap.yaml  deployment.yaml  limitrange.yaml  namespace.yaml  networkpolicy.yaml  pvc.yaml  resourcequota.yaml  runtimeclass.yaml  secret.yaml  service.yaml  serviceaccount.yaml
container/scripts/: entrypoint.sh  healthcheck.sh
container/security/: apparmor-profile  claude-permissions.json  seccomp-profile.json
docs/crosswalks/: OWASP-HAIAMM-Crosswalk.md
docs/security-patterns/: HAI-Security-Architecture-Patterns.md  Vibe-Coding-Security-Guide.md  hai-security.yml  prompt-injection.yml  tool-misuse.yml
docs/security/training/: 00-core-module-assessments.md  00-core-module-hai-fundamentals.md  01-software-domain-assessments.md  01-software-domain.md  02-data-domain-assessments.md  02-data-domain.md  03-infrastructure-domain-assessments.md  03-infrastructure-domain.md  04-vendors-domain-assessments.md  04-vendors-domain.md  (+17 more)
src/verifhai/: __init__.py  cli.py
state/: progress.schema.json
templates/: DesignReview.md  EducationGuidance.md  EnvironmentHardening.md  PolicyCompliance.md  ReviewChecklist.md  SecurityTesting.md  StrategyMetrics.md  ThreatModel.md
workflows/: BuildPractice.md  DomainPractice.md  GettingStarted.md  MeasureMaturity.md  QuickAssess.md  ShowStatus.md
(+17 files in other folders)
